# rust-p2p

exchange_client/: Cargo.toml
transfer_client/example/base_client/: Cargo.toml
transfer_client/example/base_client/src/: main.rs
transfer_file/: Cargo.toml  readme.md
transfer_file/src/: lib.rs  main.rs
transfer_file/src/consts/: errors.rs  input.rs  mod.rs
transfer_file/src/file/: mod.rs
transfer_file/src/file/block/: block.rs
transfer_file/src/file/full/: read.rs  write.rs
transfer_file/src/recv/full/: mod.rs  recv.rs
transfer_file/src/recv/full/storage/: file.rs  memory.rs  mod.rs
transfer_file/src/send/: mod.rs
transfer_file/src/send/full/: mod.rs  send.rs
transfer_file/src/send/full/storage/: memory.rs
transfer_file/src/structs/: input.rs
transfer_service/: Cargo.toml
transfer_service/src/: lib.rs  main.rs
transfer_service/src/consts/: proto.rs
transfer_service/src/decode/: mod.rs  shared.rs
transfer_service/src/decode/request/: req.rs
transfer_service/src/decode/shared/: node.rs  server.rs
transfer_service/src/encode/: data.rs  mod.rs  shared.rs
transfer_service/src/encode/response/: res.rs
transfer_service/src/encode/shared/: node.rs  server.rs
transfer_service/src/report/: mod.rs
transfer_service/src/select/: mod.rs
transfer_service/src/shared/node/: mod.rs  redis.rs
transfer_service/src/shared/server/: mod.rs  redis.rs
transfer_service/src/structs/: data.rs  mod.rs  request.rs  response.rs
transfer_service/src/transfer/: mod.rs
transfer_service/src/transfer/tcp/: mod.rs  simple.rs  simple_client.rs  simplev2.rs
(+50 files in other folders)
