[package]
name = "transfer_file"
version = "0.1.0"
authors = ["MwlLj <731025894@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.transfer_client]
path = "../transfer_client"
version = "*"

[dependencies.rust_parse]
git = "https://github.com/MwlLj/rust_parse"
version = "*"
